--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ django-extensions==3.2.3
 django-htmx==1.17.3
 django-ratelimit==4.1.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 firebase-admin==6.1.0
 frozenlist==1.4.0
 google-api-core==2.11.0
@@ -90,6 +91,7 @@ redis==5.2.0
 reportlab==4.0.6
 requests==2.28.2
 requests-oauthlib==2.0.0
+rest-framework-simplejwt==0.0.2
 rich==13.3.1
 rsa==4.9
 schedule==1.2.1
